# prl_franka

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.MD  README.md  pixi.toml
prl_franka_control/: CMakeLists.txt  package.xml
prl_franka_control/config/arm/: arm_controllers.yaml  controller_setup.yaml
prl_franka_control/config/sensors/: ft300_controller.yaml
prl_franka_control/launch/: gripper_controller.launch.py  sensors.launch.py
prl_franka_controllers/: CMakeLists.txt  package.xml  prl_franka_controllers.xml
prl_franka_controllers/include/prl_franka_controllers/: torque_passthrough_controller.hpp
prl_franka_controllers/src/: torque_passthrough_controller.cpp
prl_franka_description/: CMakeLists.txt
prl_franka_description/plotjuggler/: config.xml
prl_franka_description/rviz/: config.rviz
prl_franka_description/srdf/: ball.srdf.xacro  franka_hand.srdf.xacro
prl_franka_description/urdf/: prl_franka.urdf  prl_franka.urdf.xacro
prl_franka_description/worlds/: empty.sdf
prl_franka_moveit/: CMakeLists.txt
prl_franka_moveit/config/: fr3.srdf  moveit.rviz  ros2_controllers.yaml
prl_franka_moveit/launch/: moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
prl_franka_msgs/: CMakeLists.txt  package.xml
prl_franka_msgs/msg/: TorqueData.msg  TrajectoryTorque.msg
prl_franka_run/: package.xml
prl_franka_run/config/: robot_config.yaml
prl_franka_run/launch/: franka.launch.py  plotjuggler.launch.py  real.launch.py  sim.launch.py
scripts/: activate_ros_completion.sh  ros-setup.sh
ws/: build.sh  fr3.urdf
(+48 files in other folders)
